# pionir

./: LICENSE  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  publish.yml
src/pionir/: __init__.py
src/pionir/core/: __init__.py  base.py  collection.py  exceptions.py  metadata.py  spectrum.py  transform.py  typing.py  utils.py
src/pionir/scatter/: __init__.py  msc.py  rnv.py  snv.py
src/pionir/sklearn/: transformer.py  utils.py
src/pionir/smoothing/: __init__.py  fourier.py  savgol.py
tests/: conftest.py
tests/core/: test_base.py  test_collection.py  test_exceptions.py  test_metadata.py  test_spectrum.py  test_utils.py
tests/scatter/: test_msc.py  test_rnv.py  test_snv.py
tests/smoothing/: test_fourier.py  test_savgol.py
