[project]
name = "pionir"
version = "0.1.0"
description = "A Comprehensive Python Package for Near-Infrared Spectroscopy (NIR)."
readme = "README.md"
license = "MIT"
license-files =  ["LICENSE"]
authors = [
    { name = "Lukas Schulig", email = "schuligl@uni-greifswald.de" }
]
keywords = ["Spectroscopy", "NIR", "chemometrics", "analytical-chemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E", "F", "N", "R", "I", "SIM"
]

[tool.ruff.format]
docstring-code-line-length = 60
indent-style = "space"
quote-style = "double"
